[gd_scene load_steps=5 format=3 uid="uid://durrbr4c6h5gu"]

[ext_resource type="Script" uid="uid://diok4hn21k3po" path="res://Scenes/pause_menu.gd" id="1_yg7lx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wse1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6n8tp"]
bg_color = Color(1, 0.179812, 0.706312, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1c7n"]
bg_color = Color(0.960308, 7.29662e-05, 0.735092, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yg7lx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.14902, 0.14902, 0.14902, 0.611765)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "The Mission is Halted"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Main")
focus_neighbor_bottom = NodePath("../Main")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wse1q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6n8tp")
theme_override_styles/focus = SubResource("StyleBoxFlat_l1c7n")
button_mask = 0
text = "Resume"

[node name="Main" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Resume")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wse1q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6n8tp")
theme_override_styles/focus = SubResource("StyleBoxFlat_l1c7n")
button_mask = 0
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main" to="." method="_on_main_pressed"]
